src/effects/slidingpopups/slidingpopups.cpp
@@ -178,7 +178,7 @@ void SlidingPopupsEffect::postPaintWindow(EffectWindow *w)
             }
             m_animations.erase(animationIt);
         }
-        w->addRepaintFull();
+        effects->addRepaint(w->expandedGeometry());
     }
 
     effects->postPaintWindow(w);
